# 30122-project-maroon-justice-index

./: .gitignore  README.md  pyproject.toml
CensusAPI/: Census_API.py
analysis/: apply_proximity_to_census.py  census_tracts_centroids.txt  index.py  proximity.py
cleaning/: 01_filter_community_centers.py  02_geocode_community_centers.py  03_add_categories_community_centers.py  03_tracts_neigh_joins.py  cleaned_idhs.json  filter_community_centers.py  geocode_community_centers.py  idhs_cleaning.py
data/: Census_Cook_County_dta.json  chicago_cook_county_zip_codes.csv  idhs_ivannar.json  index_draft_disposable_income_sex_age.json
data/chicago_zip_codes_shapefiles/: geo_export_317a6ef6-b40c-48f2-9ae0-e3287485c40c.dbf
dataviz/: test.ipynb
ppindex/: __main__.py
ppindex/CensusAPI/: Census_API.py
ppindex/analysis/: apply_proximity_to_census.py  index.py  proximity.py
ppindex/cleaning/: 00_idhs_cleaning.py  01_filter_community_centers.py  02_geocode_community_centers.py  03_add_categories_community_centers.py  04_tracts_neigh_joins.py  06_merging_datasets_for_viz.py  community_centers_crosswalk.csv  geocode_pp_partners_chicago.py
ppindex/data/: Tract_center_counts.json  community_centers_chicago.json  index_data_for_scatter.json  neigh_lat_long.csv  pp_index.json  pp_partners_chicago.json  snap_allowable_income.csv  snap_benefits.csv
ppindex/dataviz/: scatter_plot.ipynb
ppindex/src/: app.py  cc_map_data.py  test.ipynb  (+3 more)
src/: app.py  comm_centers_neighborhoods.geojson  geocoded_community_centers_chicago.csv  map-drafts.ipynb
webscraping/: idhs.json  idhs.py
(+8 files in other folders)
